added class for content; minor color update hover

--- a/basics/recipe/index.html
+++ b/basics/recipe/index.html
@@ -7,7 +7,7 @@
   <body>
     <section id="body-wrapper">
         <h1 id="title">Maple Salmon</h1>
-        <article id="grid-row">
+        <article id="grid-row" class="body-content">
             <section class="row" id="content-row1">
                 <img id="dish-image" src="https://i.imgur.com/F77Z2ET.jpeg" />
                 <section id="blurb">This was one of the first dishes I learned to make. It was both simple and rewarding reinforcing my confidence in my ability to cook a good meal.</br></br>I highly suggest you create this dish with boiled asparagus. When made just right, the salmon practically dissolves in your mouth as a profile of sweetness against the bitterness of the asparagus.</br></br></br></br>This is one easy but fun dish to make and can be enjoyed any time of the year. I personally never expected to enjoy the blend of maple and mustard but, somehow they work just right.</section>
@@ -60,7 +60,7 @@
                 </section>
             </section>
         </article>
-        <section id="sources"><h5>Source: <a href="https://cooking.nytimes.com/recipes/1021718-maple-baked-salmon">New York Times</a></h5></section>
+        <section id="sources" class="body-content"><h5>Source: <a href="https://cooking.nytimes.com/recipes/1021718-maple-baked-salmon">New York Times</a></h5></section>
     </section>
   </body>
 </html>
